data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureStrongholdPieces.LeftTurn.md
---
title: "StructureStrongholdPieces.LeftTurn"
description: "public static class StructureStrongholdPieces.LeftTurn extends StructureStrongholdPieces.Stronghold"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureStrongholdPieces.LeftTurn.html"
sourceType: javadoc
---

# StructureStrongholdPieces.LeftTurn

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold → net.minecraft.world.gen.structure.StructureStrongholdPieces.LeftTurn

## Class signature

```java
public static class StructureStrongholdPieces.LeftTurn extends StructureStrongholdPieces.Stronghold
```

## Methods

- `boolean addComponentParts(World p_74875_1_, java.util.Random p_74875_2_, StructureBoundingBox p_74875_3_)`
- `void buildComponent(StructureComponent p_74861_1_, java.util.List p_74861_2_, java.util.Random p_74861_3_)`
- `static StructureStrongholdPieces.LeftTurn findValidPlacement(java.util.List p_75010_0_, java.util.Random p_75010_1_, int p_75010_2_, int p_75010_3_, int p_75010_4_, int p_75010_5_, int p_75010_6_)`

## Fields

- `LeftTurn`
- `LeftTurn`
